# rust-lib

./: .gitignore  Cargo.toml  publish-all  run
.github/: settings.yml
.github/workflows/: rust.yml
docs/: CONTRIBUTING.md  README.md  SECURITY.md
src/automata/: Cargo.toml
src/automata/src/: nfa.rs  pattern.rs
src/data/: Cargo.toml
src/data/benches/: bench_tree_query.rs
src/data/src/: diet.rs  hash_map_tree.rs  lib.rs  opt_vec.rs  text.rs
src/flexer/: Cargo.toml
src/flexer-testing/definition/: Cargo.toml
src/flexer-testing/definition/src/: lib.rs
src/flexer-testing/generation/: Cargo.toml  build.rs
src/flexer/src/: generate.rs  group.rs  lib.rs
src/flexer/tests/: flexer_invalid_definitions.rs
src/generics/src/: hlist.rs  lib.rs
src/lazy-reader/: Cargo.toml
src/logger/: Cargo.toml
src/logger/src/: enabled.rs  lib.rs  macros.rs
src/logger/src/entry/: message.rs
src/logger/src/processor/consumer/: js_console.rs
src/logger/src/processor/formatter/: js_console.rs
src/optics/: Cargo.toml
src/prelude/: Cargo.toml
src/prelude/src/: clone.rs  debug.rs  lib.rs  option.rs  string.rs  switch.rs  vec.rs
src/prelude/src/debug/: logging.rs
src/shapely/impl/: Cargo.toml
src/shapely/impl/src/: lib.rs
src/shapely/macros/: Cargo.toml
